parser/overnight/OvernightParser.py
# Generated from ./overnight/Overnight.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class OvernightParser ( Parser ):

    grammarFileName = "Overnight.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'en.'", "'.'", "'string'", "'number'", 
                     "'!'", "'type'", "'var'", "'lambda'", "'='", "'<'", 
                     "'>'", "'min'", "'max'", "'sum'", "'avg'", "'listValue'", 
                     "'size'", "'domain'", "'singleton'", "'filter'", "'getProperty'", 
                     "'superlative'", "'countSuperlative'", "'countComparative'", 
                     "'aggregate'", "'concat'", "'reverse'", "'ensureNumericProperty'", 
                     "'ensureNumericEntity'", "'date'", "<INVALID>", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PREFIX", "LB", 
                      "RB", "DATE", "TIME", "INTEGER", "STRING_LITERAL", 
                      "WS" ]

    RULE_root = 0
    RULE_np = 1
    RULE_entity = 2
    RULE_concept = 3
    RULE_predicate = 4
    RULE_relNP = 5
    RULE_reversePredicate = 6
    RULE_value = 7
    RULE_constraintNP = 8
    RULE_cp = 9
    RULE_filterCP = 10
    RULE_superlativeCP = 11
    RULE_comparativeCP = 12
    RULE_op = 13
    RULE_aggregateType = 14
    RULE_listValue = 15
    RULE_size = 16
    RULE_domain = 17
    RULE_singleton = 18
    RULE_filterFunc = 19
    RULE_getProperty = 20
    RULE_superlative = 21
    RULE_countSuperlative = 22
    RULE_countComparative = 23
    RULE_aggregate = 24
    RULE_concat = 25
    RULE_reverse = 26
    RULE_ensureNumericProperty = 27
    RULE_ensureNumericEntity = 28
    RULE_string = 29
    RULE_date = 30
    RULE_time = 31
    RULE_quantity = 32

    ruleNames =  [ "root", "np", "entity", "concept", "predicate", "relNP", 
                   "reversePredicate", "value", "constraintNP", "cp", "filterCP", 
                   "superlativeCP", "comparativeCP", "op", "aggregateType", 
                   "listValue", "size", "domain", "singleton", "filterFunc", 
                   "getProperty", "superlative", "countSuperlative", "countComparative", 
                   "aggregate", "concat", "reverse", "ensureNumericProperty", 
                   "ensureNumericEntity", "string", "date", "time", "quantity" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    PREFIX=31
    LB=32
    RB=33
    DATE=34
    TIME=35
    INTEGER=36
    STRING_LITERAL=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)

        def listValue(self):
            return self.getTypedRuleContext(OvernightParser.ListValueContext,0)


        def np(self):
            return self.getTypedRuleContext(OvernightParser.NpContext,0)


        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def getRuleIndex(self):
            return OvernightParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = OvernightParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(OvernightParser.LB)
            self.state = 67
            self.listValue()
            self.state = 68
            self.np()
            self.state = 69
            self.match(OvernightParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OvernightParser.RULE_np

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CPNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cp(self):
            return self.getTypedRuleContext(OvernightParser.CpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCPNP" ):
                listener.enterCPNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCPNP" ):
                listener.exitCPNP(self)


    class DomainCPNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(OvernightParser.LB)
            else:
                return self.getToken(OvernightParser.LB, i)
        def cp(self):
            return self.getTypedRuleContext(OvernightParser.CpContext,0)

        def domain(self):
            return self.getTypedRuleContext(OvernightParser.DomainContext,0)

        def relNP(self):
            return self.getTypedRuleContext(OvernightParser.RelNPContext,0)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(OvernightParser.RB)
            else:
                return self.getToken(OvernightParser.RB, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainCPNP" ):
                listener.enterDomainCPNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainCPNP" ):
                listener.exitDomainCPNP(self)


    class EntityNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entity(self):
            return self.getTypedRuleContext(OvernightParser.EntityContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityNP" ):
                listener.enterEntityNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityNP" ):
                listener.exitEntityNP(self)


    class GetPropertyNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def getProperty(self):
            return self.getTypedRuleContext(OvernightParser.GetPropertyContext,0)

        def np(self):
            return self.getTypedRuleContext(OvernightParser.NpContext,0)

        def relNP(self):
            return self.getTypedRuleContext(OvernightParser.RelNPContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetPropertyNP" ):
                listener.enterGetPropertyNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetPropertyNP" ):
                listener.exitGetPropertyNP(self)


    class NumericNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(OvernightParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericNP" ):
                listener.enterNumericNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericNP" ):
                listener.exitNumericNP(self)


    class ConcatNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def concat(self):
            return self.getTypedRuleContext(OvernightParser.ConcatContext,0)

        def np(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OvernightParser.NpContext)
            else:
                return self.getTypedRuleContext(OvernightParser.NpContext,i)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcatNP" ):
                listener.enterConcatNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcatNP" ):
                listener.exitConcatNP(self)


    class AggregateNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def aggregate(self):
            return self.getTypedRuleContext(OvernightParser.AggregateContext,0)

        def aggregateType(self):
            return self.getTypedRuleContext(OvernightParser.AggregateTypeContext,0)

        def np(self):
            return self.getTypedRuleContext(OvernightParser.NpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregateNP" ):
                listener.enterAggregateNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregateNP" ):
                listener.exitAggregateNP(self)


    class FilterNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def constraintNP(self):
            return self.getTypedRuleContext(OvernightParser.ConstraintNPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterNP" ):
                listener.enterFilterNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterNP" ):
                listener.exitFilterNP(self)


    class SizeNPContext(NpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.NpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def size(self):
            return self.getTypedRuleContext(OvernightParser.SizeContext,0)

        def np(self):
            return self.getTypedRuleContext(OvernightParser.NpContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSizeNP" ):
                listener.enterSizeNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSizeNP" ):
                listener.exitSizeNP(self)



    def np(self):

        localctx = OvernightParser.NpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_np)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = OvernightParser.CPNPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.cp()
                pass

            elif la_ == 2:
                localctx = OvernightParser.EntityNPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.entity()
                pass

            elif la_ == 3:
                localctx = OvernightParser.NumericNPContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.value()
                pass

            elif la_ == 4:
                localctx = OvernightParser.ConcatNPContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.match(OvernightParser.LB)
                self.state = 75
                self.concat()
                self.state = 76
                self.np()
                self.state = 77
                self.np()
                self.state = 78
                self.match(OvernightParser.RB)
                pass

            elif la_ == 5:
                localctx = OvernightParser.AggregateNPContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(OvernightParser.LB)
                self.state = 81
                self.aggregate()
                self.state = 82
                self.aggregateType()
                self.state = 83
                self.np()
                pass

            elif la_ == 6:
                localctx = OvernightParser.SizeNPContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.match(OvernightParser.LB)
                self.state = 86
                self.size()
                self.state = 87
                self.np()
                self.state = 88
                self.match(OvernightParser.RB)
                pass

            elif la_ == 7:
                localctx = OvernightParser.DomainCPNPContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.match(OvernightParser.LB)
                self.state = 91
                self.cp()
                self.state = 92
                self.match(OvernightParser.LB)
                self.state = 93
                self.domain()
                self.state = 94
                self.relNP()
                self.state = 95
                self.match(OvernightParser.RB)
                self.state = 96
                self.match(OvernightParser.RB)
                pass

            elif la_ == 8:
                localctx = OvernightParser.GetPropertyNPContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 98
                self.match(OvernightParser.LB)
                self.state = 99
                self.getProperty()
                self.state = 100
                self.np()
                self.state = 101
                self.relNP()
                self.state = 102
                self.match(OvernightParser.RB)
                pass

            elif la_ == 9:
                localctx = OvernightParser.FilterNPContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 104
                self.constraintNP()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OvernightParser.StringContext)
            else:
                return self.getTypedRuleContext(OvernightParser.StringContext,i)


        def LB(self):
            return self.getToken(OvernightParser.LB, 0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def getRuleIndex(self):
            return OvernightParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = OvernightParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==OvernightParser.LB:
                self.state = 107
                self.match(OvernightParser.LB)


            self.state = 110
            self.match(OvernightParser.T__0)
            self.state = 111
            self.string()
            self.state = 112
            self.match(OvernightParser.T__1)
            self.state = 113
            self.string()
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 114
                self.match(OvernightParser.RB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConceptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(OvernightParser.StringContext,0)


        def LB(self):
            return self.getToken(OvernightParser.LB, 0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def getRuleIndex(self):
            return OvernightParser.RULE_concept

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcept" ):
                listener.enterConcept(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcept" ):
                listener.exitConcept(self)




    def concept(self):

        localctx = OvernightParser.ConceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_concept)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==OvernightParser.LB:
                self.state = 117
                self.match(OvernightParser.LB)


            self.state = 120
            self.match(OvernightParser.T__0)
            self.state = 121
            self.string()
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 122
                self.match(OvernightParser.RB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)

        def string(self):
            return self.getTypedRuleContext(OvernightParser.StringContext,0)


        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def getRuleIndex(self):
            return OvernightParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = OvernightParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(OvernightParser.LB)
            self.state = 126
            self.match(OvernightParser.T__2)
            self.state = 127
            self.string()
            self.state = 128
            self.match(OvernightParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelNPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OvernightParser.RULE_relNP

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringRelNPContext(RelNPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.RelNPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def string(self):
            return self.getTypedRuleContext(OvernightParser.StringContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringRelNP" ):
                listener.enterStringRelNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringRelNP" ):
                listener.exitStringRelNP(self)


    class NumberRelNPContext(RelNPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.RelNPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def ensureNumericProperty(self):
            return self.getTypedRuleContext(OvernightParser.EnsureNumericPropertyContext,0)

        def relNP(self):
            return self.getTypedRuleContext(OvernightParser.RelNPContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberRelNP" ):
                listener.enterNumberRelNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberRelNP" ):
                listener.exitNumberRelNP(self)



    def relNP(self):

        localctx = OvernightParser.RelNPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_relNP)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = OvernightParser.StringRelNPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(OvernightParser.LB)
                self.state = 131
                self.match(OvernightParser.T__2)
                self.state = 132
                self.string()
                self.state = 133
                self.match(OvernightParser.RB)
                pass

            elif la_ == 2:
                localctx = OvernightParser.NumberRelNPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(OvernightParser.LB)
                self.state = 136
                self.ensureNumericProperty()
                self.state = 137
                self.relNP()
                self.state = 138
                self.match(OvernightParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReversePredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)

        def reverse(self):
            return self.getTypedRuleContext(OvernightParser.ReverseContext,0)


        def predicate(self):
            return self.getTypedRuleContext(OvernightParser.PredicateContext,0)


        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def relNP(self):
            return self.getTypedRuleContext(OvernightParser.RelNPContext,0)


        def getRuleIndex(self):
            return OvernightParser.RULE_reversePredicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReversePredicate" ):
                listener.enterReversePredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReversePredicate" ):
                listener.exitReversePredicate(self)




    def reversePredicate(self):

        localctx = OvernightParser.ReversePredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_reversePredicate)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(OvernightParser.LB)
                self.state = 143
                self.reverse()
                self.state = 144
                self.predicate()
                self.state = 145
                self.match(OvernightParser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(OvernightParser.LB)
                self.state = 148
                self.reverse()
                self.state = 149
                self.relNP()
                self.state = 150
                self.match(OvernightParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OvernightParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DateNPContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def date(self):
            return self.getTypedRuleContext(OvernightParser.DateContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateNP" ):
                listener.enterDateNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateNP" ):
                listener.exitDateNP(self)


    class NumericEntityNPContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def ensureNumericEntity(self):
            return self.getTypedRuleContext(OvernightParser.EnsureNumericEntityContext,0)

        def np(self):
            return self.getTypedRuleContext(OvernightParser.NpContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericEntityNP" ):
                listener.enterNumericEntityNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericEntityNP" ):
                listener.exitNumericEntityNP(self)


    class TimeNPContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def time(self):
            return self.getTypedRuleContext(OvernightParser.TimeContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeNP" ):
                listener.enterTimeNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeNP" ):
                listener.exitTimeNP(self)


    class NumberNPContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a OvernightParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(OvernightParser.LB, 0)
        def quantity(self):
            return self.getTypedRuleContext(OvernightParser.QuantityContext,0)

        def RB(self):
            return self.getToken(OvernightParser.RB, 0)
        def string(self):
            return self.getTypedRuleContext(OvernightParser.StringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberNP" ):
                listener.enterNumberNP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberNP" ):
                listener.exitNumberNP(self)


    class ConcatValueNPContext(ValueContext):
